--- a/Andoku/res/values-de/strings.xml
+++ b/Andoku/res/values-de/strings.xml
@@ -43,6 +43,7 @@
     <string name="button_resume_game">Spiel fortsetzen</string>
     <string name="button_start_game">Spiel starten</string>
     <string name="dialog_reset_puzzle">Rätsel zurücksetzen?</string>
+    <string name="difficulty_unknown">Unbekannt</string>
     <string name="html_page_about">about-de.html</string>
     <string name="html_page_help">help-de.html</string>
     <string name="info_puzzle_ok_1">Alles okay. Ein Feld ist noch auszufüllen.</string>
