--- a/Andoku/res/values/strings.xml
+++ b/Andoku/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="button_resume_game">Resume Game</string>
     <string name="button_start_game">Start Game</string>
     <string name="dialog_reset_puzzle">Reset Puzzle?</string>
+    <string name="difficulty_unknown">Unknown</string>
     <string name="html_page_about">about.html</string>
     <string name="html_page_help">help.html</string>
     <string name="info_puzzle_ok_1">Everything is okay. One cell to go.</string>
