--- a/Andoku/res/values/strings.xml
+++ b/Andoku/res/values/strings.xml
@@ -72,7 +72,7 @@
     <string name="spinner_extra_regions">Extra regions:</string>
     <string name="spinner_grid">Grid style:</string>
     <string name="title_no_puzzle">No puzzle available</string>
-    <string name="title_puzzle">%s #%d/%d (%s)</string>
+    <string name="title_puzzle">%s (%s)</string>
     <string name="warn_error_loading_puzzle">An error has occurred while loading the puzzle!</string>
     <string name="warn_puzzle_errors">Sorry, you have made some mistakes!</string>
  </resources>
