--- a/Andoku/res/values-de/strings.xml
+++ b/Andoku/res/values-de/strings.xml
@@ -42,8 +42,10 @@
     <string name="button_reset_game">Spiel zurücksetzen</string>
     <string name="button_resume_game">Spiel fortsetzen</string>
     <string name="button_start_game">Spiel starten</string>
-    <string name="dialog_io_error">I/O-Fehler</string>
     <string name="dialog_reset_puzzle">Rätsel zurücksetzen?</string>
+    <string name="error_message_loading_puzzle">Beim Laden des Sudoku-Rätsels ist ein Fehler aufgetreten!</string>
+    <string name="error_message_stack_trace">Stack-Trace:</string>
+    <string name="error_title_io_error">I/O-Fehler</string>
     <string name="html_page_about">about-de.html</string>
     <string name="html_page_help">help-de.html</string>
     <string name="info_puzzle_ok_1">Alles okay. Ein Feld ist noch auszufüllen.</string>
@@ -53,7 +55,6 @@
     <string name="menu_reset_puzzle">Zurücksetzen</string>
     <string name="menu_resume">Fortfahren</string>
     <string name="message_congrats">&lt;b&gt;Gratuliere, Sie haben das Sudoku-Rätsel gelöst!&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;Statistik für &lt;i&gt;%s (%s)&lt;/i&gt;:&lt;br/&gt;&lt;br/&gt;Gelöste Rätsel: %d&lt;br/&gt;Durchschnittszeit: %s&lt;br/&gt;Bestzeit: %s</string>
-    <string name="message_error_loading_puzzle">Beim Laden des Sudoku-Rätsels ist ein Fehler aufgetreten!</string>
     <string name="message_reset_puzzle">Wollen Sie das aktuelle Sudoku-Rätsel und die Stoppuhr wirklich zurücksetzen?</string>
     <string name="name_no_puzzle">Kein Sudoku-Rätsel verfügbar</string>
     <string name="name_sudoku_squiggly">Squiggly Sudoku</string>
