--- a/Andoku/res/values-de/strings.xml
+++ b/Andoku/res/values-de/strings.xml
@@ -37,6 +37,7 @@
     <string name="button_nav_cancel">Abbrechen</string>
     <string name="button_nav_help">Hilfe</string>
     <string name="button_nav_resume_game">Spiel fortsetzen</string>
+    <string name="button_nav_select_folders">Ordner</string>
     <string name="button_nav_select_new_game">Neues Spiel</string>
     <string name="button_nav_start_game">Spiel starten</string>
     <string name="button_reset_game">Spiel zurücksetzen</string>
@@ -56,6 +57,7 @@
     <string name="menu_reset_puzzle">Zurücksetzen</string>
     <string name="menu_resume">Fortfahren</string>
     <string name="message_congrats">&lt;b&gt;Gratuliere, Sie haben das Sudoku-Rätsel gelöst!&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;Statistik für &lt;i&gt;%s (%s)&lt;/i&gt;:&lt;br/&gt;&lt;br/&gt;Gelöste Rätsel: %d&lt;br/&gt;Durchschnittszeit: %s&lt;br/&gt;Bestzeit: %s</string>
+    <string name="message_empty_folder">Der Ordner \'%s\' ist leer.</string>
     <string name="message_reset_puzzle">Wollen Sie das aktuelle Sudoku-Rätsel und die Stoppuhr wirklich zurücksetzen?</string>
     <string name="name_no_puzzle">Kein Sudoku-Rätsel verfügbar</string>
     <string name="name_sudoku_squiggly">Squiggly Sudoku</string>
@@ -65,6 +67,7 @@
     <string name="name_sudoku_standard_hyper">Hyper-Sudoku</string>
     <string name="name_sudoku_standard_x">X-Sudoku</string>
     <string name="page_title_about">Über Andoku</string>
+    <string name="page_title_folder_list">Importierte Ordner</string>
     <string name="page_title_help">Hilfe zu Andoku</string>
     <string name="page_title_new_game">Neues Spiel starten</string>
     <string name="page_title_resume_game">Spiel fortsetzen</string>
