--- a/Andoku/res/values/strings.xml
+++ b/Andoku/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="button_nav_cancel">Cancel</string>
     <string name="button_nav_help">Help</string>
     <string name="button_nav_resume_game">Resume Game</string>
+    <string name="button_nav_select_folders">Folders</string>
     <string name="button_nav_select_new_game">New Game</string>
     <string name="button_nav_start_game">Start Game</string>
     <string name="button_reset_game">Reset Game</string>
@@ -56,6 +57,7 @@
     <string name="menu_reset_puzzle">Reset Puzzle</string>
     <string name="menu_resume">Resume</string>
     <string name="message_congrats">&lt;b&gt;Congratulations, you have solved this puzzle!&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;Statistics for &lt;i&gt;%s (%s)&lt;/i&gt;:&lt;br/&gt;&lt;br/&gt;Puzzles solved: %d&lt;br/&gt;Average time: %s&lt;br/&gt;Fastest time: %s</string>
+    <string name="message_empty_folder">Folder \'%s\' is empty.</string>
     <string name="message_reset_puzzle">Do you really want to clear the current puzzle and reset the timer?</string>
     <string name="name_no_puzzle">No puzzle available</string>
     <string name="name_sudoku_squiggly">Squiggly Sudoku</string>
@@ -65,6 +67,7 @@
     <string name="name_sudoku_standard_hyper">Hyper-Sudoku</string>
     <string name="name_sudoku_standard_x">X-Sudoku</string>
     <string name="page_title_about">About Andoku</string>
+    <string name="page_title_folder_list">Imported Folders</string>
     <string name="page_title_help">Help on Andoku</string>
     <string name="page_title_new_game">Start New Game</string>
     <string name="page_title_resume_game">Resume Game</string>
