--- a/Andoku/res/values/strings.xml
+++ b/Andoku/res/values/strings.xml
@@ -79,6 +79,8 @@
     <string name="page_title_new_game">Start New Game</string>
     <string name="page_title_resume_game">Resume Game</string>
     <string name="page_title_welcome">Welcome to Andoku</string>
+    <string name="perm_description_import">Allows the application to create folders and import sudoku puzzles into Andoku.</string>
+    <string name="perm_label_import">import sudoku puzzles into Andoku</string>
     <string name="prompt_spinner_difficulty">Choose difficulty level</string>
     <string name="prompt_spinner_extra_regions">Choose extra regions</string>
     <string name="prompt_spinner_grid">Choose a grid style</string>
