--- a/Andoku/res/values/strings.xml
+++ b/Andoku/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="button_nav_resume_game">Resume Game</string>
     <string name="button_nav_select_folders">Folders</string>
     <string name="button_nav_select_new_game">New Game</string>
+    <string name="button_nav_settings">Settings</string>
     <string name="button_nav_start_game">Start Game</string>
     <string name="button_reset_game">Reset Game</string>
     <string name="button_resume_game">Resume Game</string>
@@ -60,6 +61,7 @@
     <string name="menu_pause">Pause</string>
     <string name="menu_reset_puzzle">Reset Puzzle</string>
     <string name="menu_resume">Resume</string>
+    <string name="menu_settings">Settings</string>
     <string name="message_congrats">&lt;b&gt;Congratulations, you have solved this puzzle!&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;Statistics for &lt;i&gt;%s (%s)&lt;/i&gt;:&lt;br/&gt;&lt;br/&gt;Puzzles solved: %d&lt;br/&gt;Average time: %s&lt;br/&gt;Fastest time: %s</string>
     <string name="message_delete_folder">Folder \'%s\' is not empty. Do you really want to delete it?</string>
     <string name="message_empty_folder">Folder \'%s\' is empty.</string>
