Compute solution on the fly
git-svn-id: http://andoku.googlecode.com/svn/trunk@188 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-de/strings.xml
+++ b/Andoku/res/values-de/strings.xml
@@ -62,6 +62,7 @@
     <string name="menu_reset_puzzle">Zurücksetzen</string>
     <string name="menu_resume">Fortfahren</string>
     <string name="menu_settings">Einstellungen</string>
+    <string name="message_computing_solution">Berechne die Lösung. Bitte warten...</string>
     <string name="message_congrats">&lt;b&gt;Gratuliere, Sie haben das Sudoku-Rätsel gelöst!&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;Statistik für &lt;i&gt;%s (%s)&lt;/i&gt;:&lt;br/&gt;&lt;br/&gt;Gelöste Rätsel: %d&lt;br/&gt;Durchschnittszeit: %s&lt;br/&gt;Bestzeit: %s</string>
     <string name="message_delete_folder">Der Ordner \'%s\' ist nicht leer. Wollen Sie ihn wirklich löschen?</string>
     <string name="message_empty_folder">Der Ordner \'%s\' ist leer.</string>
@@ -89,5 +90,6 @@
     <string name="spinner_difficulty">Schwierigkeitsgrad:</string>
     <string name="spinner_extra_regions">Zusatzbereiche:</string>
     <string name="spinner_grid">Raster:</string>
+    <string name="warn_invalid_puzzle">Dieses Rätsel ist ungültig und kann nicht gelöst werden!</string>
     <string name="warn_puzzle_errors">Das Sudoku-Rätsel hat leider einige Fehler!</string>
  </resources>
