--- a/Andoku/res/values/strings.xml
+++ b/Andoku/res/values/strings.xml
@@ -63,12 +63,15 @@
     <string name="menu_resume">Resume</string>
     <string name="menu_settings">Settings</string>
     <string name="message_computing_solution">Computing solution. Please wait...</string>
-    <string name="message_congrats">&lt;b&gt;Congratulations, you have solved this puzzle!&lt;/b&gt;&lt;br/&gt;&lt;br/&gt;Statistics for &lt;i&gt;%s (%s)&lt;/i&gt;:&lt;br/&gt;&lt;br/&gt;Puzzles solved: %d&lt;br/&gt;Average time: %s&lt;br/&gt;Fastest time: %s</string>
+    <string name="message_congrats">&lt;b&gt;Congratulations, you have solved this puzzle!&lt;/b&gt;</string>
     <string name="message_delete_folder">Folder \'%s\' is not empty. Do you really want to delete it?</string>
     <string name="message_empty_folder">Folder \'%s\' is empty.</string>
     <string name="message_folder_exists">Could not rename folder because another folder named \'%s\' already exists!</string>
     <string name="message_rename_folder">New name for \'%s\':</string>
     <string name="message_reset_puzzle">Do you really want to clear the current puzzle and reset the timer?</string>
+    <string name="message_statistics_details">Puzzles solved: %d&lt;br/&gt;Average time: %s&lt;br/&gt;Fastest time: %s</string>
+    <string name="message_statistics_title_assets">Statistics for &lt;i&gt;%s (%s)&lt;/i&gt;:</string>
+    <string name="message_statistics_title_db">Statistics for folder &lt;i&gt;%s&lt;/i&gt;:</string>
     <string name="name_no_puzzle">No puzzle available</string>
     <string name="name_sudoku_squiggly">Squiggly Sudoku</string>
     <string name="name_sudoku_squiggly_hyper">Squiggly Hyper-Sudoku</string>
