--- a/Andoku/res/values-de/strings.xml
+++ b/Andoku/res/values-de/strings.xml
@@ -87,6 +87,8 @@
     <string name="page_title_welcome">Willkommen zu Andoku</string>
     <string name="perm_description_import">Erlaubt es einer Anwendung, Ordner in Andoku zu erstellen und Sudoku-Rätsel zu importieren.</string>
     <string name="perm_label_import">Sudoku-Rätsel in Andoku importieren</string>
+    <string name="permgroup_description_andoku">Gruppe von Rechten um mit Andoku zu interagieren.</string>
+    <string name="permgroup_label_andoku">Andoku</string>
     <string name="prompt_spinner_difficulty">Schwierigkeitsgrad auswählen</string>
     <string name="prompt_spinner_extra_regions">Zusatzbereiche auswählen</string>
     <string name="prompt_spinner_grid">Raster auswählen</string>
