--- a/Andoku/res/values/strings.xml
+++ b/Andoku/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
   Andoku - a sudoku puzzle game for Android.
   Copyright (C) 2009  Markus Wiederkehr
 
@@ -18,6 +18,10 @@
 -->
 
 <resources>
+    <!-- Application name -->
+    <string name="app_name">Andoku</string>
+
+    <!-- When was a game last played (used by "Resume Game") -->
     <string name="age_0_minutes">0 minutes ago</string>
     <string name="age_1_day">yesterday</string>
     <string name="age_1_hour">1 hour ago</string>
@@ -28,73 +32,105 @@
     <string name="age_n_hours">%d hours ago</string>
     <string name="age_n_minutes">%d minutes ago</string>
     <string name="age_n_weeks">%d weeks ago</string>
-    <string name="alert_dialog_cancel">Cancel</string>
+
+    <!-- Okay and cancel buttons for alert dialogs (reset puzzle, rename folder, ..) -->
     <string name="alert_dialog_ok">OK</string>
-    <string name="app_name">Andoku</string>
-    <string name="button_dismiss_congrats">Continue</string>
+    <string name="alert_dialog_cancel">Cancel</string>
+
+    <!-- Navigation buttons (mostly used by main menu) -->
+    <string name="button_nav_resume_game">Resume Game</string>
+    <string name="button_nav_select_new_game">New Game</string>
+    <string name="button_nav_select_folders">Folders</string>
+    <string name="button_nav_settings">Settings</string>
+    <string name="button_nav_help">Help</string>
     <string name="button_nav_about">About</string>
+    <string name="button_nav_start_game">Start Game</string>
     <string name="button_nav_back">Back</string>
     <string name="button_nav_cancel">Cancel</string>
-    <string name="button_nav_help">Help</string>
-    <string name="button_nav_resume_game">Resume Game</string>
-    <string name="button_nav_select_folders">Folders</string>
-    <string name="button_nav_select_new_game">New Game</string>
-    <string name="button_nav_settings">Settings</string>
-    <string name="button_nav_start_game">Start Game</string>
+
+    <!-- Button to dismiss congratulations/statistics at the end of a game -->
+    <string name="button_dismiss_congrats">Continue</string>
+
+    <!-- Different values for the button that starts/resumes/resets a game (when browsing through the list of puzzles) -->
     <string name="button_reset_game">Reset Game</string>
     <string name="button_resume_game">Resume Game</string>
     <string name="button_start_game">Start Game</string>
+
+    <!-- Context menu entries for the "Imported Folders" activity -->
     <string name="context_menu_delete_folder">Delete Folder</string>
     <string name="context_menu_rename_folder">Rename Folder</string>
+
+    <!-- Captions and messages for confirmation dialogs -->
     <string name="dialog_delete_folder">Delete Folder</string>
+    <string name="message_delete_folder">Folder \'%s\' is not empty. Do you really want to delete it?</string>
     <string name="dialog_rename_folder">Rename Folder</string>
+    <string name="message_rename_folder">New name for \'%s\':</string>
+    <string name="message_folder_exists">Could not rename folder because another folder named \'%s\' already exists!</string>
     <string name="dialog_reset_puzzle">Reset Puzzle?</string>
+    <string name="message_reset_puzzle">Do you really want to clear the current puzzle and reset the timer?</string>
+
+    <!-- Captions for the error page -->
+    <string name="error_title_io_error">I/O Error</string>
+
+    <!-- Messages for the error page -->
     <string name="error_message_finding_available">An error has occurred while finding available puzzles!</string>
     <string name="error_message_loading_puzzle">An error has occurred while loading the puzzle!</string>
     <string name="error_message_stack_trace">Stack trace:</string>
-    <string name="error_title_io_error">I/O Error</string>
+
+    <!-- Names of the help and about pages for this language (under folder "assets") -->
     <string name="html_page_about">about.html</string>
     <string name="html_page_help">help.html</string>
+
+    <!-- Info/warning messages for "Check Puzzle" -->
+    <string name="message_computing_solution">Computing solution. Please wait...</string>
     <string name="info_puzzle_ok_1">Everything is okay. One cell to go.</string>
     <string name="info_puzzle_ok_n">Everything is okay. %d cells to go.</string>
+    <string name="warn_invalid_puzzle">This puzzle is invalid and cannot be solved!</string>
+    <string name="warn_puzzle_errors">Sorry, you have made some mistakes!</string>
+
+    <!-- Options menu while playing -->
     <string name="menu_check_puzzle">Check Puzzle</string>
     <string name="menu_pause">Pause</string>
     <string name="menu_reset_puzzle">Reset Puzzle</string>
     <string name="menu_resume">Resume</string>
     <string name="menu_settings">Settings</string>
-    <string name="message_computing_solution">Computing solution. Please wait...</string>
+
+    <!-- Messages for congratulations/statistics at end of game -->
     <string name="message_congrats">&lt;b&gt;Congratulations, you have solved this puzzle!&lt;/b&gt;</string>
-    <string name="message_delete_folder">Folder \'%s\' is not empty. Do you really want to delete it?</string>
-    <string name="message_empty_folder">Folder \'%s\' is empty.</string>
-    <string name="message_folder_exists">Could not rename folder because another folder named \'%s\' already exists!</string>
-    <string name="message_rename_folder">New name for \'%s\':</string>
-    <string name="message_reset_puzzle">Do you really want to clear the current puzzle and reset the timer?</string>
-    <string name="message_statistics_details">Puzzles solved: %d&lt;br/&gt;Average time: %s&lt;br/&gt;Fastest time: %s</string>
     <string name="message_statistics_title_assets">Statistics for &lt;i&gt;%s (%s)&lt;/i&gt;:</string>
     <string name="message_statistics_title_db">Statistics for folder &lt;i&gt;%s&lt;/i&gt;:</string>
-    <string name="name_no_puzzle">No puzzle available</string>
+    <string name="message_statistics_details">Puzzles solved: %d&lt;br/&gt;Average time: %s&lt;br/&gt;Fastest time: %s</string>
+
+    <!-- Folder cannot be opened because it's empty -->
+    <string name="message_empty_folder">Folder \'%s\' is empty.</string>
+
+    <!-- Puzzle names (displayed top-left when playing) -->
     <string name="name_sudoku_squiggly">Squiggly Sudoku</string>
     <string name="name_sudoku_squiggly_hyper">Squiggly Hyper-Sudoku</string>
     <string name="name_sudoku_squiggly_x">Squiggly X-Sudoku</string>
     <string name="name_sudoku_standard">Standard Sudoku</string>
     <string name="name_sudoku_standard_hyper">Hyper-Sudoku</string>
     <string name="name_sudoku_standard_x">X-Sudoku</string>
-    <string name="page_title_about">About Andoku</string>
+
+    <!-- Captions for various activities -->
+    <string name="page_title_welcome">Welcome to Andoku</string>
+    <string name="page_title_resume_game">Resume Game</string>
+    <string name="page_title_new_game">Start New Game</string>
     <string name="page_title_folder_list">Imported Folders</string>
     <string name="page_title_help">Help on Andoku</string>
-    <string name="page_title_new_game">Start New Game</string>
-    <string name="page_title_resume_game">Resume Game</string>
-    <string name="page_title_welcome">Welcome to Andoku</string>
-    <string name="perm_description_import">Allows the application to create folders and import sudoku puzzles into Andoku.</string>
-    <string name="perm_label_import">import sudoku puzzles into Andoku</string>
-    <string name="permgroup_description_andoku">Group of permissions to interact with Andoku.</string>
-    <string name="permgroup_label_andoku">Andoku</string>
-    <string name="prompt_spinner_difficulty">Choose difficulty level</string>
-    <string name="prompt_spinner_extra_regions">Choose extra regions</string>
-    <string name="prompt_spinner_grid">Choose a grid style</string>
-    <string name="spinner_difficulty">Difficulty level:</string>
-    <string name="spinner_extra_regions">Extra regions:</string>
+    <string name="page_title_about">About Andoku</string>
+
+    <!-- Game type and difficulty selection (used by "Start New Game") -->
     <string name="spinner_grid">Grid style:</string>
-    <string name="warn_invalid_puzzle">This puzzle is invalid and cannot be solved!</string>
-    <string name="warn_puzzle_errors">Sorry, you have made some mistakes!</string>
+    <string name="prompt_spinner_grid">Choose a grid style</string>
+    <string name="spinner_extra_regions">Extra regions:</string>
+    <string name="prompt_spinner_extra_regions">Choose extra regions</string>
+    <string name="spinner_difficulty">Difficulty level:</string>
+    <string name="prompt_spinner_difficulty">Choose difficulty level</string>
+
+    <!-- Declares a permission group and a permission that allows external applications to import puzzles into Andoku -->
+    <string name="permgroup_label_andoku">Andoku</string>
+    <string name="permgroup_description_andoku">Group of permissions to interact with Andoku.</string>
+    <string name="perm_label_import">import sudoku puzzles into Andoku</string>
+    <string name="perm_description_import">Allows the application to create folders and import sudoku puzzles into Andoku.</string>
  </resources>
