--- a/Andoku/res/values-de/strings.xml
+++ b/Andoku/res/values-de/strings.xml
@@ -58,6 +58,10 @@
     <string name="button_resume_game">Spiel fortsetzen</string>
     <string name="button_start_game">Spiel starten</string>
 
+    <!-- Additional keypad buttons -->
+    <string name="button_clear">C</string>
+    <string name="button_invert">+/-</string>
+
     <!-- Context menu entries for the "Imported Folders" activity -->
     <string name="context_menu_delete_folder">Ordner löschen</string>
     <string name="context_menu_rename_folder">Ordner umbenennen</string>
