"Continue" instead of "Start Game"
git-svn-id: http://andoku.googlecode.com/svn/trunk@280 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values-de/strings.xml
+++ b/Andoku/res/values-de/strings.xml
@@ -46,7 +46,7 @@
     <string name="button_nav_settings">Einstellungen</string>
     <string name="button_nav_help">Hilfe</string>
     <string name="button_nav_about">Über...</string>
-    <string name="button_nav_start_game">Spiel starten</string>
+    <string name="button_nav_start_game">Weiter</string>
     <string name="button_nav_back">Zurück</string>
     <string name="button_nav_cancel">Abbrechen</string>
 
