--- a/Andoku/res/values/strings.xml
+++ b/Andoku/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="button_nav_settings">Settings</string>
     <string name="button_nav_help">Help</string>
     <string name="button_nav_about">About</string>
-    <string name="button_nav_start_game">Start Game</string>
+    <string name="button_nav_start_game">Continue</string>
     <string name="button_nav_back">Back</string>
     <string name="button_nav_cancel">Cancel</string>
 
