use Inv instead of +/-
git-svn-id: http://andoku.googlecode.com/svn/trunk@283 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values/strings.xml
+++ b/Andoku/res/values/strings.xml
@@ -60,7 +60,7 @@
 
     <!-- Additional keypad buttons -->
     <string name="button_clear">C</string>
-    <string name="button_invert">+/-</string>
+    <string name="button_invert">Inv</string>
 
     <!-- Context menu entries for the "Imported Folders" activity -->
     <string name="context_menu_delete_folder">Delete Folder</string>
