Added an option to eliminate values (issue #16).
git-svn-id: http://andoku.googlecode.com/svn/trunk@291 8b5035ae-46ba-11de-80ae-c1ff141340a0

--- a/Andoku/res/values/strings.xml
+++ b/Andoku/res/values/strings.xml
@@ -99,6 +99,7 @@
     <string name="menu_pause">Pause</string>
     <string name="menu_reset_puzzle">Reset Puzzle</string>
     <string name="menu_resume">Resume</string>
+    <string name="menu_eliminate_values">Eliminate Values</string>
     <string name="menu_settings">Settings</string>
 
     <!-- Messages for congratulations/statistics at end of game -->
