--- a/Andoku/res/values-de/strings.xml
+++ b/Andoku/res/values-de/strings.xml
@@ -99,6 +99,7 @@
     <string name="menu_pause">Pause</string>
     <string name="menu_reset_puzzle">Zurücksetzen</string>
     <string name="menu_resume">Fortfahren</string>
+    <string name="menu_eliminate_values">Werte eliminieren</string>
     <string name="menu_settings">Einstellungen</string>
 
     <!-- Messages for congratulations/statistics at end of game -->
